--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chrono-node": "^1.2.5",
     "commander": "^2.9.0",
     "jsonfile": "^2.4.0",
+    "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
     "nconf": "^0.8.4",
