Add support to edit most recent file in a notebook
This commits adds an -r/--recent flag to allow quick editing of the most
recently modified file in a notebook.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/srsudar/tanager",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "chrono-node": "^1.2.5",
     "commander": "^2.9.0",
+    "glob": "^7.1.1",
     "jsonfile": "^2.4.0",
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
