--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
+    "npm": "^5.7.1",
     "untildify": "^3.0.2"
   },
   "devDependencies": {
